# gearcity-optimizer

./: .gitignore  CONTRIBUTING.md  LICENSE  NOTICE  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml  streamlit_app.py
data/: README.md  candidate_designs.csv  chassis_candidates.csv  chassis_design_inputs.csv  engine_candidates.csv  engine_design_inputs.csv  engine_layout_reference.json  gearbox_candidates.csv  gearbox_design_inputs.csv  vehicle_types.csv  wiki_component_compatibility.json
docs/: architecture.md  component_naming_standard.md  formulas.md
gearcity_optimizer/: __init__.py  data_sources.py  formula_browser.py
scripts/: calibration_smoke_test.py  download_wiki_pages.py  import_wiki_pages.py
sources/: wiki_urls.json
tests/: conftest.py  test_advisor.py  test_calibration_defaults.py  test_calibration_policy.py  test_chassis_formula.py  test_cli.py  test_component_availability_context.py  test_component_choices.py  test_component_formula_bridge.py  test_component_optimizer.py  test_component_priorities.py  test_components_xml.py  test_design_checklist.py  test_design_diagnostics.py  test_design_physical_constraints.py  test_design_skill_decay.py  test_engine_formula.py  test_engine_layout_compatibility.py  test_gearbox_formula.py  test_gearbox_save_ratios.py  test_global_design_objective.py  test_layout_reference.py  test_llm_fast_path.py  test_llm_repair.py  test_llm_strategy.py  test_naming_guide.py  test_optimizer.py  test_package_formula_scoring.py  test_part_recommender.py  test_penalties.py  test_real_save_smoke_test.py  test_save_calibration.py  (+23 more)
(+106 files in other folders)
