[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "gearcity-optimizer"
version = "0.1.0"
description = "Unofficial local design helper for GearCity vehicle priorities and formula experiments"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "pandas>=2.0",
    "requests>=2.28",
    "beautifulsoup4>=4.12",
    "streamlit>=1.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
    "black>=24.0",
]

[project.scripts]
gearcity-optimizer = "gearcity_optimizer.cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["gearcity_optimizer*"]

[tool.setuptools.package-data]
gearcity_optimizer = ["resources/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.black]
line-length = 88
target-version = ["py312"]
